# cpp-temp

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  CmakeLists.txt  README.md  cpp-temp.code-workspace  flake.nix  vcpkg-configuration.json  vcpkg.json
pkgs/: CMakeLists.txt
pkgs/main/: CMakeLists.txt
pkgs/main/src/: main.cc
tools/: msbuild.bat
